deployment/kafdrop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafdrop
  namespace: rvr
spec:
  selector:
    deploymentconfig: kafdrop
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
