deployment/kafdrop-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kafdrop
  namespace: rvr
spec:
  path: /
  to:
    kind: Service
    name: kafdrop
  port:
    targetPort: 9000
